--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "example": "node ./examples/index.js"
+    "example": "docker compose -f examples/bullmq/docker-compose.yaml up"
   },
   "dependencies": {
     "@nostr-fetch/adapter-nostr-tools": "0.13.1",
     "bullmq": "4.14.2",
+    "dotenv": "16.3.1",
     "ioredis": "5.3.2",
     "nostr-fetch": "0.13.1",
     "nostr-tools": "1.17.0",
