nostr-trawl -> nostrawl

--- a/examples/bullmq/docker-compose.yaml
+++ b/examples/bullmq/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
       - ./.redis:/data:rw
     command: redis-server
 
-  nostr-trawl:
+  nostrawl:
     build: 
       context: ../../
       dockerfile: examples/bullmq/Dockerfile
