--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "bullmq": "4.14.2",
     "dotenv": "16.3.1",
     "ioredis": "5.3.2",
+    "javascript-time-ago": "2.5.9",
+    "lmdb": "3.0.5",
     "nostr-fetch": "0.13.1",
     "nostr-tools": "1.17.0",
     "p-queue": "7.4.1",
