--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@nostrwatch/nostrawl",
-  "version": "0.1.0",
+  "name": "nostrawl",
+  "version": "0.1.1",
   "description": "A nostr library for continously retrieving events from nostr relays based on a set of filters.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
