--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "p-queue": "7.4.1",
     "promise-deferred": "2.0.4",
     "ramda": "0.30.1",
+    "tseep": "1.3.1",
     "websocket-polyfill": "0.0.3"
   },
   "devDependencies": {
